# bp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  main.cpp  point.h  pointstree.cpp  randompoint.cpp  randompoint.h  readme.md  todo.md  uml.tx  voronoi.cpp  voronoi.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
accuracy_tests/: CMakeLists.txt  generate_neigbors_normal.cpp  generate_neighbor.cpp  neigbors_accuracy.cpp  neigbors_normal.cpp
benchmark/: CMakeLists.txt  compute_voro.cpp  knn.cpp  nn.cpp  nnNormal.cpp  treebuild.cpp
picture/: BP_GJK.ipynb  BP_Ilustrative_pics.ipynb  BP_balltree.ipynb  BP_becnchmark_knn_accuracy.ipynb  BP_benchmark_accuracy.ipynb  BP_benchmark_knnspeed_normal.ipynb  BP_benchmark_nn_normlaspeed.ipynb  BP_benchmarks.py.ipynb  BP_kdtree.ipynb  BP_normal_acc.ipynb  BP_octree_quadtree.ipynb  BP_rndpoints.ipynb  diagram_balltree.drawio  hastree-search-treeview.drawio  kd-tree.drawio  knn_normal_speed-24-05-05,09:01.json  knn_speed-24-05-01,11:26.json  nn_para_FINAL.txt  nn_time-24-04-25,11:14__half.json  octree-good_diagram.drawio  octreehash_search_treeview.drawio  points_3d_normal_plane_100.txt  points_3d_normal_plane_1000.txt  points_3d_normal_plane_10000.txt  points_3d_testedpoints_0.txt  points_3d_testedpoints_1.txt  points_3d_testedpoints_10.txt  points_3d_testedpoints_11.txt  points_3d_testedpoints_12.txt  points_3d_testedpoints_13.txt  points_3d_testedpoints_14.txt  points_3d_testedpoints_15.txt  points_3d_testedpoints_16.txt  points_3d_testedpoints_17.txt  points_3d_testedpoints_18.txt  points_3d_testedpoints_19.txt  points_3d_testedpoints_2.txt  points_3d_testedpoints_20.txt  points_3d_testedpoints_21.txt  points_3d_testedpoints_22.txt  (+39 more)
picture/presentation_mid/: Akcelerace vyhledávání v prostorových strukturách prezetace pulrok.pptx  binarysearch.drawio  prezentace.ipynb
playground/: CMakeLists.txt  face_voro.cpp  find_voro_cell.cpp  ghostcell.cpp  loops_voro.cpp  lopps_better.cpp
src/: Makefile  OctreNodeBuilder.cpp  OctreeNode.cpp  OctreeNode.h  OctrerNodeBuilder.h  bkj.cpp  bkj.h  box.cpp  box.h  gjk.cpp  gjk.h  hastree.cpp  hastree.h  main.cpp  point.cpp  point.h  pointstree.h  polyhedron.cpp  polyhedron.h  randompoint.cpp  randompoint.h
test/: CMakeLists.txt  findbelogingInterval.cpp  nn_acceptance_test.cpp  nn_test.cpp  test_box.cpp  test_gjk.cpp  test_gkj.cpp  test_point.cpp  test_tree.cpp
thesis/: projek-01-01-grafy_balltree.tex  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.aux  projekt.blg  projekt.lof  projekt.out  projekt.ptc  projekt.tex  projekt.toc
thesis/data/: points.txt  voronoi.txt
